# elephant

./: .dockerignore  .gitignore  .pylintrc  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SPECIFICATION.md  config.example.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
.github/: dependabot.yml
.github/workflows/: tests.yml
data/: README.md
elephant/: __init__.py  __main__.py  app.py  config.py  cron.py  database.py  import_yearly.py  models.py  simulation.py  yearly_dataset.py
elephant/providers/: __init__.py  base.py  bna_helper.py  bundesnetzagentur.py  bundesnetzagentur_all.py  electricitymaps.py  energycharts.py  helpers.py
elephant/templates/: index.html
elephant/utils/: __init__.py  time_range_filter.py
migrations/: 01_add_cron_run_migration.sql  02_add_carbon_overwrites.sql  02_add_carbon_yearly.sql  03_rename_estimation_to_estimated.sql
tests/: __init__.py  test_app.py  test_bundesnetzagentur.py  test_config.py  test_cron.py  test_database.py  test_electricitymaps.py  test_energycharts.py  test_helpers.py  test_providers.py  test_simulation.py  test_time_range_filter.py
